# library-tracker

./: .gitignore  README.md  build-dist.sh  pyproject.toml  run.bat  run.ps1  setup.bat
.github/workflows/: release-dist.yml
config/: accounts.example.yaml
docs/: library-integration-research.md
library_tracker/: __init__.py  alingsas.py  base.py  cli.py  html_output.py  html_utils.py  http.py  koha.py  lerum.py  logging_utils.py  models.py  molnlycke.py  pagination.py  partille.py  summary.py
