[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "library-tracker"
version = "1.0.0"
description = "Tool for aggregating loans and reservations across Swedish libraries"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["library", "loans", "reservations", "sweden"]

dependencies = ["PyYAML"]

[project.scripts]
library-tracker = "library_tracker.cli:main"
